# tensor-morph

./: .gitignore  CMakeLists.txt  README.md  TensorMorph-Lab.ipyn  TensorMorph.ipynb  tm-cli  tm-cli.sh
experimental/: Advisor.cpp  Advisor.h  DataGen.ipynb  README.md  Training.ipynb  schema.py  simulator.py
lib/: CMakeLists.txt
lib/Passes/: FoldBatchNorm.cpp  TensorFeatures.cpp  TensorFeatures.h  TosaAlgebraicFolds.cpp  TosaLinearAlgebraFolder.cpp  TosaOptimizationsPass.cpp  TosaPatterns.h  TosaStructuralFusions.cpp
scripts/: benchmark.sh  ingest.py
tests/: complex_mobile_block.mlir  conv_add_clamp.mlir  conv_affine_fusion.mlir  conv_mul_fusion.mlir  conv_sub_fusion.mlir  depthwise_fusion_suite.mlir  fanout_cloning.mlir  identity_add.mlir  identity_mul.mlir  identity_sub.mlir  mega_fusion.mlir  pad_elimination.mlir  pointwise_add_chain.mlir  pointwise_mul_chain.mlir  run_tests.py  transpose_fold.mlir
tools/: CMakeLists.txt  tensormorph-opt.cpp
